[project]
name = "dexscan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "MIT"}
requires-python = "==3.11.*"
dependencies = [
    "alive-progress==3.*",
    "attrs==23.1.0",
    "cattrs==23.1.2",
    "ciso8601==2.3.0",
    "cryo-python>=0.3.0",
    "discord==2.3.*",
    "edgedb==1.5.0",
    "joblib==1.3.2",
    "keras==2.13.1",
    "lightgbm==4.0.0",
    "orjson==3.9.1",
    "pandas>=2.2.3",
    "polars>=1.18.0",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "requests==2.31.0",
    "rich==13.4.2",
    "scikit-learn==1.3.0",
    "scipy==1.11.2",
    "tensorflow==2.13.0",
    "torch==2.1.1",
    "tzdata==2023.3",
    "uniswap-universal-router-decoder==0.9.0",
    "web3==6.5.0",
    "websockets==11.0.3",
    "yarl==1.9.2",
]

[dependency-groups]
dev = [
    "mypy>=1.10.1",
    "ruff>=0.8.5",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
extend-exclude = ["dexscan/edge_codegen.py"]

[tool.ruff.lint]
extend-ignore = ["E402"]
